syntax = "proto3";

package api.interactive.v1;

option go_package = "github.com/GoSimplicity/LinkMe-microservices/api/interactive/v1;v1";

import "google/api/annotations.proto";

service Interactive {
  rpc GetInteractive (GetInteractiveRequest) returns (GetInteractiveReply) {
    option (google.api.http) = {
      get: "/get/{postId}"
    };
  }
  rpc ListInteractive (ListInteractiveRequest) returns (ListInteractiveReply) {
    option (google.api.http) = {
      post: "/list"
      body: "*"
    };
  }
  rpc AddReadCount (AddCountRequest) returns (AddCountReply);
  rpc AddLikeCount (AddCountRequest) returns (AddCountReply);
  rpc AddCollectCount (AddCountRequest) returns (AddCountReply);
}

message GetInteractiveRequest{
  int64 postId = 1;
}

message GetInteractiveReply {
  int32 code = 1;
  string msg = 2;
  GetOrListInteractive data = 3;
}

message ListInteractiveRequest {
  int32 page = 1;
	int64 size = 2;
}

message ListInteractiveReply {
  int32 code = 1;
  string msg = 2;
  repeated GetOrListInteractive data = 3;
}

message AddCountRequest {
  int64 postId = 1;
  string bizName = 2;
}

message AddCountReply {
  int32 code = 1;
  string msg = 2;
}

message GetOrListInteractive {
  int64 ID = 1;
  int64 BizID = 2;
  string BizName = 3;
  int64 ReadCount = 4;
  int64 LikeCount = 5;
  int64 CollectCount = 6;
  int64 UpdateTime = 7;
  int64 CreateTime = 8;
  int64 PostId = 9;
}
